# mpi_data_tool

./: CMakeLists.txt
desvm/: desvc_distributed.cpp  desvc_ensemble.cpp  desvc_test.cpp  desvr_distributed.cpp  desvr_ensemble.cpp  desvr_test.cpp
feature/: clean_element.cpp  cor_feature.cpp  count_feature.cpp  extract_dimension.cpp  extract_instance_number.cpp  extract_label_info.cpp  extract_target_info.cpp  feature_understanding.cpp  libsvm_separate_target_sparse.cpp  mean_feature.cpp  merge_element_to_colume_sparse.cpp  min_max_feature.cpp  mrmr_feature.cpp  orange_to_libsvm.cpp  sample_split.cpp  sax_feature.cpp  sparse_separate_pos_neg.cpp  split_by_row.cpp  split_row_sparse_to_element.cpp  squared_sum_feature.cpp  std_feature.cpp
mdt_core/: Integer.cpp  Integer.hpp  Number.cpp  Number.hpp  SparseFormatter.cpp  SparseFormatter.hpp  allocator.hpp  count_line.cpp  count_line.hpp  file_open.cpp  file_open.hpp  file_read_error.cpp  file_read_error.hpp  file_write_error.cpp  file_write_error.hpp  in_range.cpp  in_range.hpp  unordered_map.hpp
ssvm/: LinearSSVC.cpp  LinearSSVC.hpp  LinearSSVR.cpp  LinearSSVR.hpp  Matrix.hpp  NumberType.hpp  RBFRSVC.cpp  RBFRSVC.hpp  RBFRSVR.cpp  RBFRSVR.hpp  SSVC.cpp  SSVC.hpp  SSVR.cpp  SSVR.hpp  SparseData.cpp  SparseData.hpp  SparseMatrix.hpp  SparseVector.hpp  Triplet.hpp  Triplets.hpp  Vector.hpp
ssvm_test/: linear_ssvc_predict.cpp  linear_ssvc_test.cpp  linear_ssvc_train.cpp  linear_ssvc_train_sparse.cpp  linear_ssvr_predict.cpp  linear_ssvr_test.cpp  linear_ssvr_train.cpp  rbf_rsvc_predict.cpp  rbf_rsvc_test.cpp  rbf_rsvc_train.cpp  rbf_rsvr_predict.cpp  rbf_rsvr_test.cpp  rbf_rsvr_train.cpp  test_sparse.cpp  test_ssvc.cpp  test_ssvc_sparse.cpp  test_ssvr.cpp
